@@ -1,3 +1,9 @@
+2012-03-20 Borut Razem <borut.razem AT gmail.com>
+
+	* src/mcs51/gen.c, src/SDCCasm.c, src/SDCCasm.h, src/z80/gen.c,
+	  src/SDCCutil.c, src/ds390/gen.c, src/hc08/gen.c:
+	  code claning, optimization, ...
+
 2012-03-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* device/include/stdint.h,
